Refactor backend models and controllers with enhanced repository methods and service logic
Replit-Commit-Author: Agent